--- a/catalog.html
+++ b/catalog.html
@@ -27,13 +27,13 @@
       <div class="header-fixed">
         <div class="container">
           <div class="row">
-            <div class="col-md-2 col-sm-3">
+            <div class="col-md-2 col-sm-3 col-3">
               <a href="/" class="logo">
                 <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
               </a>
             </div>
-             <div class="col-md-8 col-sm-3">
-              <nav class="nav-menu">
+             <div class="col-md-8 col">
+              <nav class="nav-menu js-nav">
                 <ul class="nav-list">
                   <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
@@ -46,7 +46,7 @@
               </nav>
               </div>
               <!-- /.col-md-8 -->
-              <div class="col-md-2 col-sm-6">
+              <div class="col-md-2 col-sm-6 col-7">
                 <div class="link-group">
                   <a href = "#" class="user-link primary-link">
                     <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img user-icon">
@@ -56,7 +56,7 @@
                     <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                     <span class="products-num">3</span>
                   </a>
-                  <div class="header-burger">
+                  <div class="header-burger js-burger">
                     <span></span>
                   </div>
                   <!-- /.header-burger -->
@@ -79,7 +79,7 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                       <div class="banner-content">
                         <h1 class="banner-title">Santos Coffee BR</h1>
                         <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
@@ -90,7 +90,7 @@
                       </div>
                       <!-- banner-content -->
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                       <div class="banner-slider">
                         <img src="/images/img/swiper-catalog-img.png" alt="swiper-catalog-image" class="banner-slider-image">
                       </div>
@@ -103,7 +103,7 @@
                 <!-- /.swiper-slide -->
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                       <div class="banner-content">
                         <h1 class="banner-title">Santos Coffee BR</h1>
                         <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
@@ -114,7 +114,7 @@
                       </div>
                       <!-- banner-content -->
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                       <div class="banner-slider">
                         <img src="/images/img/swiper-catalog-img.png" alt="banner-slider-image" class="banner-slider-image">
                       </div>
@@ -127,7 +127,7 @@
                 <!-- /.swiper-slide -->
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                       <div class="banner-content">
                         <h1 class="banner-title">Santos Coffee BR</h1>
                         <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
@@ -138,7 +138,7 @@
                       </div>
                       <!-- banner-content -->
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                       <div class="banner-slider">
                         <img src="/images/img/swiper-catalog-img.png" alt="banner-slider-image" class="banner-slider-image">
                       </div>
@@ -151,7 +151,7 @@
                 <!-- /.swiper-slide -->
               </div>
               <!-- /.swiper-wrapper -->
-              <div class="swiper-buttons">
+              <div class="swiper-buttons ct">
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
               </div>
