--- a/catalog_page.html
+++ b/catalog_page.html
@@ -27,13 +27,13 @@
       <div class="header-fixed">
         <div class="container">
           <div class="row">
-            <div class="col-md-2 col-sm-3">
+            <div class="col-md-2 col-sm-3 col-3">
               <a href="/" class="logo">
                 <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
               </a>
             </div>
-             <div class="col-md-8 col-sm-3">
-              <nav class="nav-menu">
+             <div class="col-md-8 col">
+              <nav class="nav-menu js-nav">
                 <ul class="nav-list">
                   <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
@@ -46,7 +46,7 @@
               </nav>
               </div>
               <!-- /.col-md-8 -->
-              <div class="col-md-2 col-sm-6">
+              <div class="col-md-2 col-sm-6 col-7">
                 <div class="link-group">
                   <a href = "#" class="user-link primary-link">
                     <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img user-icon">
@@ -56,7 +56,7 @@
                     <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                     <span class="products-num">3</span>
                   </a>
-                  <div class="header-burger">
+                  <div class="header-burger js-burger">
                     <span></span>
                   </div>
                   <!-- /.header-burger -->
@@ -90,7 +90,7 @@
     <!-- /.catalog-title -->
     <div class="catalog-cards container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="sidebar">
             <div class="sidebar-box sidebar-search">
               <div class="sidebar-btn js-search-btn">
@@ -141,9 +141,9 @@
           <!-- /.sidebar -->
         </div>
         <!-- /.col-md-4 -->
-        <div class="col-md-8">
+        <div class="col-lg-8 col-md-8 col-sm-12">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-12">
               <div class="product-card ct-product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
@@ -162,8 +162,10 @@
                    </div>
                  <!-- /.product-dropdown -->
                  <div class="product-buy">
-                   <span class="price-text">Цена:</span>
-                   <span class="price">4 400.00 ₽</span>
+                   <div>
+                    <span class="price-text">Цена:</span>
+                    <span class="price">4 400.00 ₽</span>
+                   </div>
                    <form class="buy-form">
                     <div class="amount">
                       <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
@@ -182,7 +184,7 @@
               <!-- /.product-card -->
             </div>
             <!-- /.col-md-6 -->
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-12">
               <div class="product-card ct-product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
@@ -201,8 +203,10 @@
                    </div>
                  <!-- /.product-dropdown -->
                  <div class="product-buy">
-                   <span class="price-text">Цена:</span>
-                   <span class="price">4 400.00 ₽</span>
+                   <div>
+                    <span class="price-text">Цена:</span>
+                    <span class="price">4 400.00 ₽</span>
+                   </div>
                    <form class="buy-form">
                     <div class="amount">
                       <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
@@ -221,7 +225,7 @@
               <!-- /.product-card -->
             </div>
             <!-- /.col-md-6 -->
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-12">
               <div class="product-card ct-product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
@@ -240,8 +244,10 @@
                    </div>
                  <!-- /.product-dropdown -->
                  <div class="product-buy">
-                   <span class="price-text">Цена:</span>
-                   <span class="price">4 400.00 ₽</span>
+                   <div>
+                    <span class="price-text">Цена:</span>
+                    <span class="price">4 400.00 ₽</span>
+                   </div>
                    <form class="buy-form">
                     <div class="amount">
                       <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
@@ -260,7 +266,7 @@
               <!-- /.product-card -->
             </div>
             <!-- /.col-md-6 -->
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-12">
               <div class="product-card ct-product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
@@ -279,8 +285,10 @@
                    </div>
                  <!-- /.product-dropdown -->
                  <div class="product-buy">
-                   <span class="price-text">Цена:</span>
-                   <span class="price">4 400.00 ₽</span>
+                   <div>
+                    <span class="price-text">Цена:</span>
+                    <span class="price">4 400.00 ₽</span>
+                   </div>
                    <form class="buy-form">
                     <div class="amount">
                       <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
@@ -299,7 +307,7 @@
               <!-- /.product-card -->
             </div>
             <!-- /.col-md-6 -->
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-12">
               <div class="product-card ct-product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
@@ -318,8 +326,10 @@
                    </div>
                  <!-- /.product-dropdown -->
                  <div class="product-buy">
-                   <span class="price-text">Цена:</span>
-                   <span class="price">4 400.00 ₽</span>
+                   <div>
+                    <span class="price-text">Цена:</span>
+                    <span class="price">4 400.00 ₽</span>
+                   </div>
                    <form class="buy-form">
                     <div class="amount">
                       <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
@@ -338,7 +348,7 @@
               <!-- /.product-card -->
             </div>
             <!-- /.col-md-6 -->
-            <div class="col-md-6">
+            <div class="col-lg-6 col-sm-12">
               <div class="product-card ct-product-card">
                 <div class="product-card-header">
                   <img src="/images/img/product-card-image-1.png" alt="Product-card-image" class="product-card-image">
@@ -357,8 +367,10 @@
                    </div>
                  <!-- /.product-dropdown -->
                  <div class="product-buy">
-                   <span class="price-text">Цена:</span>
-                   <span class="price">4 400.00 ₽</span>
+                   <div>
+                    <span class="price-text">Цена:</span>
+                    <span class="price">4 400.00 ₽</span>
+                   </div>
                    <form class="buy-form">
                     <div class="amount">
                       <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
