--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </a>
             </div>
              <div class="col-md-8 col">
-              <nav class="nav-menu">
+              <nav class="nav-menu js-nav">
                 <ul class="nav-list">
                   <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
@@ -56,7 +56,7 @@
                     <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                     <span class="products-num">3</span>
                   </a>
-                  <div class="header-burger">
+                  <div class="header-burger js-burger">
                     <span></span>
                   </div>
                   <!-- /.header-burger -->
