--- a/product.html
+++ b/product.html
@@ -27,13 +27,13 @@
       <div class="header-fixed">
         <div class="container">
           <div class="row">
-            <div class="col-md-2 col-sm-3">
+            <div class="col-md-2 col-sm-3 col-3">
               <a href="/" class="logo">
                 <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
               </a>
             </div>
-             <div class="col-md-8 col-sm-3">
-              <nav class="nav-menu">
+             <div class="col-md-8 col">
+              <nav class="nav-menu js-nav">
                 <ul class="nav-list">
                   <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
@@ -46,7 +46,7 @@
               </nav>
               </div>
               <!-- /.col-md-8 -->
-              <div class="col-md-2 col-sm-6">
+              <div class="col-md-2 col-sm-6 col-7">
                 <div class="link-group">
                   <a href = "#" class="user-link primary-link">
                     <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img user-icon">
@@ -56,7 +56,7 @@
                     <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                     <span class="products-num">3</span>
                   </a>
-                  <div class="header-burger">
+                  <div class="header-burger js-burger">
                     <span></span>
                   </div>
                   <!-- /.header-burger -->
