--- a/order.html
+++ b/order.html
@@ -118,7 +118,7 @@
                   <span class="order-price-symbol">₽</span>
                 </td>
                 <td>
-                  <span>1шт.</span>
+                  <span class="order-amount">1шт.</span>
                 </td>
                 <td>
                   <span>360.00</span>
