--- a/product.html
+++ b/product.html
@@ -107,11 +107,33 @@
                 <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
               </div>
               <!-- /.slide -->
+              <div class="slide">
+                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
+              </div>
+              <!-- /.slide -->
+              <div class="slide">
+                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
+              </div>
+              <!-- /.slide -->
             </div>
             <!-- /.img-slider -->
           </div>
           <!-- /.product-image-wrapper -->
           <div class="second-slider">
+            <div class="second-slider-item">
+              <div class="item-wrapper">
+                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
+              </div>
+              <!-- /.item-wrapper -->
+            </div>
+            <!-- /.second-slider-item -->
+            <div class="second-slider-item">
+              <div class="item-wrapper">
+                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
+              </div>
+              <!-- /.item-wrapper -->
+            </div>
+            <!-- /.second-slider-item -->
             <div class="second-slider-item">
               <div class="item-wrapper">
                 <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
