--- a/product.html
+++ b/product.html
@@ -88,17 +88,9 @@
     <!-- /.bread -->
     <div class="pr-product-card container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12 spec-1">
           <div class="product-image-wrapper">
-            <div class="img-slider">
-              <div class="slide">
-                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
-              </div>
-              <!-- /.slide -->
-              <div class="slide">
-                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
-              </div>
-              <!-- /.slide -->
+            <div class="img-slider js-img-slider">
               <div class="slide">
                 <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
               </div>
@@ -119,21 +111,7 @@
             <!-- /.img-slider -->
           </div>
           <!-- /.product-image-wrapper -->
-          <div class="second-slider">
-            <div class="second-slider-item">
-              <div class="item-wrapper">
-                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
-              </div>
-              <!-- /.item-wrapper -->
-            </div>
-            <!-- /.second-slider-item -->
-            <div class="second-slider-item">
-              <div class="item-wrapper">
-                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
-              </div>
-              <!-- /.item-wrapper -->
-            </div>
-            <!-- /.second-slider-item -->
+          <div class="second-slider js-second-slider">
             <div class="second-slider-item">
               <div class="item-wrapper">
                 <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
@@ -166,7 +144,7 @@
           <!-- /.second-slider -->
         </div>
         <!-- /.col-md-6 -->
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12 spec-2">
           <div class="product-card-content">
             <div class="product-card-top">
               <span class="article">Артикул: K-552</span>
