--- a/cart.html
+++ b/cart.html
@@ -92,13 +92,13 @@
     <div class="container">
       <div class="cart-table">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-2 col-6">
             <a href="#" class="cart-img-link">
               <img src="/images/img/cart-img.jpg" alt="Cart-image" class="cart-img">
             </a>
           </div>
           <!-- /.col-md-2 -->
-          <div class="col-md-3">
+          <div class="col-md-3 col-sm-2 col-6">
             <div class="cart-info">
               <div class="cart-info-title">Columbia Andino</div>
               <div class="cart-info-text">
@@ -113,7 +113,7 @@
             <!-- /.cart-info -->
           </div>
           <!-- /.col-md-3 -->
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-2 col-4">
             <div class="cart-price">
               <span class="cart-price-num">360.00</span>
               <span class="cart-price-symbol">₽</span>
@@ -121,7 +121,7 @@
             <!-- /.cart-price -->
           </div>
           <!-- /.col-md-2 -->
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-2 col-4">
             <div class="amount cart-amount">
               <div class="minus pr"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
               <div class="cart-num">1</div>
@@ -130,7 +130,7 @@
             <!-- /.amount -->
           </div>
           <!-- /.col-md-2 -->
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-2 col-4">
             <div class="total-price">
               <span class="cart-price-num">360.00</span>
               <span class="cart-price-symbol">₽</span>
@@ -138,10 +138,10 @@
             <!-- /.total-price -->
           </div>
           <!-- /.col-md-2 -->
-          <div class="col-md-1">
+          <div class="col-md-1 col-sm-1">
             <form>
               <button class="cancel-btn">
-                <img src="/images/img/cancel.svg" alt="Icon: cancel" class="cancel-icon">
+                <img src="/images/img/cancel.svg" alt="Icon: cancel" class="cancel-icon js-svg-img">
               </button>
             </form>
           </div>
@@ -153,15 +153,15 @@
       <br/>
       <br/>
       <div class="row">
-        <div class="col-md-9"></div>
+        <div class="col-md-9 col-sm-9 col-6"></div>
         <!-- /.col-md-9 -->
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-2 col-6">
           Итого:
           <span class="cart-price-num">360.00</span>
           <span class="cart-price-symbol">₽</span>
         </div>
         <!-- /.col-md-2 -->
-        <div class="col-md-1">
+        <div class="col-md-1 col-sm-1">
         </div>
         <!-- /.col-md-1 -->
       </div>
@@ -169,7 +169,7 @@
       <br/>
       <br/>
       <div class="row justify-content-end">
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-3 col-12">
           <a href="/order.html" class="buy-link ct-link primary-link">Продолжить</a>
         </div>
         <!-- /.col-md-3 -->
