--- a/catalog_page.html
+++ b/catalog_page.html
@@ -122,16 +122,16 @@
                   <div class="price-input-group">
                     <label class="price-input-label">
                       <span class="price-input-text">от</span>
-                      <input type="number" min="0" max="10000" class = "price-input" id="input-0">
+                      <input type="number" min="0" max="10000" class = "price-input js-input-0">
                     </label>
                     <span class="price-input-devider">-</span>
                     <label class="price-input-label">
                       <span class="price-input-text">до</span>
-                      <input type="number" min="0" max="10000" class = "price-input" id="input-1"> 
+                      <input type="number" min="0" max="10000" class = "price-input js-input-1"> 
                     </label>
                   </div>
                   <!-- /.price-input-group -->
-                  <div id="range-slider"></div>
+                  <div class="js-range-slider"></div>
                 <button type="submit" class="primary-link filter-btn">Применить</button>
               </form>
               <!-- /.sidebar-form -->
