--- a/order.html
+++ b/order.html
@@ -94,7 +94,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-9 col-sm-9 col-6">
           <table class="table">
             <tbody>
               <tr>
@@ -102,7 +102,7 @@
                   <span class="order-num">1.</span>
                   <img src="/images/img/order-img.jpg" alt="order-image" class="order-img">
                 </td>
-                <td>
+                <td class="res-flex">
                   <span class="cart-info-title">Columbia Andino</span> <br/>
                   <span class="cart-info-text">
                     Обжарка : средняя; 
@@ -121,8 +121,8 @@
                   <span class="order-amount">1шт.</span>
                 </td>
                 <td>
-                  <span>360.00</span>
-                  <span>₽</span>
+                  <span class="order-price-num">360.00</span>
+                  <span class="order-price-symbol">₽</span>
                 </td>
               </tr>
             </tbody>
@@ -136,7 +136,7 @@
           <!-- /.condition -->
         </div>
         <!-- /.col-md-9 -->
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-3 col-6">
           <div class="total-box">
             <div class="total-box-title">Итого к оплате</div>
             <div class="total-box-num">
